--- a/reservas sala.html
+++ b/reservas sala.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="pagina">
-    <h1 class="titulo">Reservar Sala</h1>
+    <h1 class="titulo">Reservar Sala
 
     <div class="card">
 
