--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 
 <div class="layout">
 
-    <!-- MENU LATERAL -->
+    <!-- Menu Lateral -->
     <aside class="sidebar">
         <h2 class="logo">Sistema</h2>
 
@@ -20,7 +20,7 @@
         <a href="#" onclick="carregar('perfil.html')">👤 Perfil</a>
     </aside>
 
-    <!-- ÁREA DINÂMICA -->
+    <!-- Área Dinâmica -->
     <main class="conteudo">
         <iframe id="frame" src="home.html"></iframe>
     </main>
