--- a/dashboard.html
+++ b/dashboard.html
@@ -16,8 +16,10 @@
         <h2 class="logo">Sistema</h2>
 
         <a href="#" onclick="carregar('home.html')">🏠 Home</a>
-        <a href="#" onclick="carregar('minhas reservas.html')">📄 Minhas Reservas</a>
+        <a href="#" onclick="carregar('solicitações de reservas.html')">📄 Solicitação Reserva</a>
         <a href="#" onclick="carregar('perfil.html')">👤 Perfil</a>
+        <a href="#" onclick="carregar('status solicitações.html')">Solicitações Pendentes</a>
+
     </aside>
 
     <!-- Área Dinâmica -->
