--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="pagina">
-    <h1 class="titulo">Dashboard</h1>
+    <h1 class="titulo"></h1>
 
     <div class="card">
         <h2>Bem-vindo, Usuário!</h2>
