--- a/cadastro.html
+++ b/cadastro.html
@@ -32,7 +32,7 @@
 
         <div class="login-links">
             <span>Já tem conta?</span>
-            <a href="index.html" class="link-bold">Entrar</a>
+            <a href="login.html" class="link-bold">Entrar</a>
         </div>
     </div>
 </div>
