--- a/recuperação de senha.html
+++ b/recuperação de senha.html
@@ -24,7 +24,7 @@
         <button class="btn">Enviar código</button>
 
         <div class="login-links">
-            <a href="index.html">Voltar ao login</a>
+            <a href="login.html">Voltar ao login</a>
         </div>
     </div>
 </div>
