--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,8 @@
         <a href="#" onclick="carregar('perfil.html')">👤 Perfil</a>
         <a href="#" onclick="carregar('solicitações de reservas.html')">📄 Solicitar Reserva</a>
         <a href="#" onclick="carregar('status solicitações.html')">Solicitações Pendentes</a>
-
+        <a href="#" onclick="carregar('minhas reservas.html')">Minhas Reservas</a>
+        <a href="#" onclick="carregar('avisos.html')">Avisos</a>
     </aside>
 
     <!-- Área Dinâmica -->
