--- a/cadastro.html
+++ b/cadastro.html
@@ -12,6 +12,8 @@
     <h1>Criar conta</h1>
 </header>
 
+<img src="Imagens/Logo_UEMG.png" class="Logo_UEMG">
+
 <div class="container">
     <div class="card">
         <h2>Cadastro do usuário</h2>
