--- a/login.html
+++ b/login.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="componentes.css">
+    <link rel="stylesheet" href="componentes.css" >
+    <style>
+        .btn {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
 
     <header class="top-bar">
         <h1>Login</h1>
     </header>
+
+    <img src="Imagens/Logo_UEMG.png" class="Logo_UEMG">
+    
 
     <div class="container">
         <div class="card">
@@ -25,7 +33,7 @@
             <button class="btn">Entrar</button>
 
             <div class="login-links">
-                <a href="recuperação de senha.html">Esqueceu a senha?</a>
+                <a href="recuperacao_de_senha.html">Esqueceu a senha?</a>
                 <br><br>
                 <span>Não tem conta?</span>
                 <a href="cadastro.html" class="link-bold">Criar conta</a>
