Solicitações de reservas

--- a/solicitacoes_de_reservas.html
+++ b/solicitacoes_de_reservas.html
@@ -13,14 +13,14 @@
 
     <div class="container-opcoes">
 
-        <div class="box-opcao" onclick="window.location.href='reservas sala.html'">
+        <div class="box-opcao" onclick="window.location.href='reservas_sala.html'">
             <h2>Reservas de Sala</h2>
-            <p>Veja ou solicite reservas de salas de informática.</p>
+            <p>Solicite reservas de salas.</p>
         </div>
 
-        <div class="box-opcao" onclick="window.location.href='reservas veiculo.html'">
+        <div class="box-opcao" onclick="window.location.href='reservas_veiculo.html'">
             <h2>Reservas de Veículo</h2>
-            <p>Acesse suas reservas de transporte.</p>
+            <p>Solicite reservas de veículos.</p>
         </div>
 
     </div>
