--- a/perfil.html
+++ b/perfil.html
@@ -19,7 +19,10 @@
         <input type="text" class="input" value="usuario@email.com" disabled>
 
         <label class="label">CPF:</label>
-        <input type="text" class="input" value="000.000.000-00" disabled>
+        <input type="text" class="input">
+
+        <label class="label">RG</label>
+        <input type="text" class="input">
 
     </div>
 </div>
