--- a/solicitacoes_de_reservas.html
+++ b/solicitacoes_de_reservas.html
@@ -14,12 +14,12 @@
     <div class="container-opcoes">
 
         <div class="box-opcao" onclick="window.location.href='reservas_sala.html'">
-            <h2>Reservas de Sala</h2>
+            <h2>Reserva de Sala</h2>
             <p>Solicite reservas de salas.</p>
         </div>
 
         <div class="box-opcao" onclick="window.location.href='reservas_veiculo.html'">
-            <h2>Reservas de Veículo</h2>
+            <h2>Reserva de Veículo</h2>
             <p>Solicite reservas de veículos.</p>
         </div>
 
