--- a/perfil.html
+++ b/perfil.html
@@ -21,7 +21,7 @@
         <label class="label">CPF:</label>
         <input type="text" class="input">
 
-        <label class="label">RG</label>
+        <label class="label">RG:</label>
         <input type="text" class="input">
 
     </div>
